[project]
name = "yt-downloader"
version = "0.1.0"
description = "Japanese YouTube downloader desktop application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "requests",
    "yt-dlp",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ui*", "download*", "utils*"]

[project.scripts]
yt-downloader = "main:main"

[tool.uv]
dev-dependencies = [
    "pyinstaller",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-v"
]
asyncio_mode = "auto"
